--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
   },
   "dependencies": {
     "@strapi-community/strapi-provider-upload-google-cloud-storage": "^4.10.5",
-    "@strapi/plugin-cloud": "4.25.2",
     "@strapi/plugin-i18n": "4.25.2",
     "@strapi/plugin-users-permissions": "4.25.2",
     "@strapi/strapi": "4.25.2",
-    "better-sqlite3": "8.6.0",
     "pg": "^8.12.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
     "styled-components": "5.3.3"
+  },
+  "devDependencies": {
+    "better-sqlite3": "8.6.0"
   },
   "author": {
     "name": "A Strapi developer"
